Correction de la checkbox sur les plats, ajout de overflow : hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,6 +522,7 @@ footer .text_footer i {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   justify-content: space-between;
   transition: box-shadow 0.2s;
+  overflow: hidden;
 }
 #main_in_menu .section_menu .section_menu_part .meal .meal_text {
   padding: 15px;
@@ -564,6 +565,7 @@ footer .text_footer i {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 #main_in_menu .section_menu .section_menu_part .meal .price_and_check .check .fa-check {
   display: grid;
